--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <h2>Sua loja online</h2>
            
         </header>
-        <nav >
-            
-            <ul>
+        <nav id="nav">
+            <button id="btn-mobile">Menu</button>
+            <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Cort.html">Cortadores de Crachás e Fotos</a></li>
                 <li><a href="Encadernacao.html">Encardenação</a></li>
