--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
            
         </header>
         <nav id="nav">
-            <button id="btn-mobile">Menu</button>
-            <ul id="menu">
+            <button aria-label="Abrir Menu" id="btn-mobile"aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
+                <span id="hamburger"></span>
+            </button>
+            <ul id="menu" role="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Cort.html">Cortadores de Crachás e Fotos</a></li>
                 <li><a href="Encadernacao.html">Encardenação</a></li>
